# termrss

./: .gitignore  Cargo.toml  README.md
src/: app.rs  article.rs  config.rs  db.rs  feed.rs  main.rs  refresh.rs  search.rs
src/ui/: article_view.rs  articles_pane.rs  feeds_pane.rs  mod.rs  modals.rs  statusbar.rs
