[package]
name = "termrss"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "signal"] }
reqwest = { version = "0.12", features = ["rustls-tls", "gzip", "brotli"], default-features = false }
feed-rs = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
html2text = "0.13"
readability = "0.3"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
directories = "5"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
